<resources>
    <string name="app_name">تیکامرس</string>
    <string name="app_name_title">تیکامرس</string>
    <string name="ButtonWelcom">ورود به فروشگاه</string>
    <string name="TextViewWelcom">به تیکامرس خوش آمدید</string>
    <string name="TextViewLogin">ورود</string>
    <string name="TextViewRegister">ثبت نام</string>
    <string name="ButtonRegister">ثبت نام</string>
    <string name="ButtonLogin">ورود</string>
    <string name="testlongText">تصور کنید شما در حال توسعه یک اپلیکیشن هستید که اکتیویتی ها و فرگمنت های مختلف و زیادی دارد که هر یکی از این component ها با یک یا چند اکتیویتی و فرگمنت ارتباط دارد برای مدیریت و سازماندهی بین این ارتباطات که ممکن است بسیار زیاد باشد کار دشواری را در پیش خواهید داشت با استفاده از کتاب خانه EventBus این ارتباطات بسیار ساده خواهند شد کتاب خانه EventBus یک پروژه open-source یا متن باز است و برپاییه ی publisher/subscriber برای ترکیب کردن استفاده می کند EventBus این امکان را فراهم می کند تا ارتباط میان دو اکتیویتی که در یکی از آنها کدهای زیاد و در دیگری کدهای نسبتا کم یا زیاد قرار دارد بدون اینکه تداخلی پیش آید ارتباط برقرار کند به طور مثال یک داده را از یک اکتیویتی به یک فرگمنت پاس دهید همچنین باعث می شود برنامه سریعتر شود.</string>
    <string name="expand">￬ بیشتـر</string>
    <string name="collapse">￪ بستن</string>
    <string name="deleteshopingbag">حذف از سبد خرید</string>
    <string name="callMe_yes">به من اطلاع بده</string>
    <string name="callMe_no">به من اطلاع نده</string>

    <string name="timerVal">00:00:00</string>

    <string name="font_awesome">fontawesome</string>
    <string name="font_iransansmobile">iransansmobile</string>

    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="fa_sort_down">&#xf0dd;</string>
    <string name="fa_sort_up">&#xf0de;</string>
    <string name="fa_check">&#xf00c;</string>
    <string name="fa_times">&#xf00d;</string>
    <string name="fa_certificate">&#xf0a3;</string>
    <string name="fa_lock">&#xF023;</string>
    <string name="fa_sheare">&#xF1E0;</string>
    <string name="fa_email">&#xF003;</string>
    <string name="fa_mobile">&#xF10B;</string>
    <string name="fa_user">&#xF2C0;</string>
    <string name="fa_grid_item">&#xf009;</string>
    <string name="fa_list_item">&#xf00b;</string>

    <string name="offer">تخفیف(-)</string>
    <string name="lastPrice">قیمت نهایی</string>
    <string name="counter">تعداد</string>
    <string name="warranty">گارانتی</string>
    <string name="color">رنگ</string>
    <string name="confirmChangePass">تغییر رمز عبور</string>
    <string name="btnConfirmMyProfile">ثبت تغییرات</string>
    <string name="btnAddAdress">افزودن آدرس</string>
    <string name="ConfirmAddress">تایید</string>
    <string name="porbazdid">پربازدیدترین</string>
    <string name="porforush">پرفروشترین</string>
    <string name="pishnahadvizhe">پیشنهاد ویژه</string>
    <string name="gheymatziyadbekam">قیمت از زیاد به کم</string>
    <string name="gheymatkambezyad">قیمت از کم به زیاد</string>
    <string name="jadidtarinha">جدیدترین</string>
    <string name="search_hint">جستجو</string>
    <string name="basket_sampleNumber">5</string>
    <string name="txt_contextTitle">عنوان مطلب</string>
    <string name="password">کلمه عبور</string>
    <string name="new_password">کلمه عبور جدید</string>
    <string name="repeat_pass">تکرار کلمه عبور جدید</string>
    <string name="change_pass">تغییر کلمه عبور</string>
    <string name="add_address">افزودن آدرس</string>
    <string name="username">نام کاربری</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="email">ایمیل</string>
    <string name="mobile">تلفن همراه</string>
    <string name="repeat_reg_pass">تکرار کلمه عبور</string>
    <string name="change">ثبت تغییرات</string>
    <string name="total_sum">جمع کل خرید شما:</string>
    <string name="total_weight">جمع وزن:</string>
    <string name="sending_method">انتخاب شیوه ارسال:</string>
    <string name="explain_for_admin">توضیحات برای مدیریت سایت:</string>
    <string name="price_title">مبلغ قابل پرداخت:</string>
    <string name="pay_method">نوع پرداخت:</string>
    <string name="accept_order">تایید سفارش</string>
    <string name="txt_bottomNav_back">بازگشت</string>
    <string name="txt_bottomNav_cat">دسته بندی</string>
    <string name="txt_bottomNav_home">خانه</string>
    <string name="txt_bottomNav_search">جستجو</string>
    <string name="txt_bottomNav_profile">پروفایل</string>
    <string name="txt_homeFragment_new">جدیدترینها</string>
    <string name="txt_homeFragment_showAll">نمایش همه</string>
    <string name="txt_homeFraggment_topSelling">محصولات پر فروش</string>
    <string name="txt_homeFraggment_hits">پربازدیدها</string>
    <string name="txt_rvHome_productName">محصول</string>
    <string name="txt_rvHome_currency">تومان</string>
    <string name="txt_rvHome_price">قیمت</string>
    <string name="item_navMenu_blog">بلاگ</string>
    <string name="item_navMenu_register">ثبت نام</string>
    <string name="item_navMenu_enter">ورود</string>
    <string name="item_navMenu_exit">خروج</string>
    <string name="txt_fragmentStockList_title">عنوان</string>
    <string name="txt_stockListFragment_viewFilter">فیلتر نمایش</string>
    <string name="txt_stockListFragment_feature">رنگ،نوع،قیمت و...</string>
    <string name="txt_stockListFragment_sort">مرتب سازی</string>
    <string name="txt_stockListFragment_sortTitle">عنوان مرتب سازی</string>
    <string name="txt_rvStockList_title">عنوان کالا</string>
    <string name="txt_rvStockList_desc">توضیحات</string>
    <string name="txt_rvStockList_priceOff">0</string>
    <string name="txt_sortingDialog_hits">پربازدیدترین</string>
    <string name="txt_sortingDialog_topSelling">پرفروش ترین</string>
    <string name="txt_sortingDialog_specialOffer">پیشنهاد ویژه</string>
    <string name="txt_sortingDialog_decrease">قیمت از زیاد به کم</string>
    <string name="txt_sortingDialog_increase">قیمت از کم به زیاد</string>
    <string name="txt_sortingDialog_newest">جدیدترین</string>
    <string name="btn_homeFragment_showAllSpecial">نمایش لیست کامل پیشنهادات ویژه</string>
    <string name="switch_fragmentSearch_exist">موجود</string>
    <string name="txt_searchFragment_remove">پاک کردن</string>
    <string name="btn_searchFragment_filter">فیلتر کن</string>
    <string name="edt_searchFragment_search">جستجو</string>
    <string name="txt_itemMain_search">آیتم ها</string>
    <string name="txt_list_subMenu_search">زیر منو</string>
    <string name="txt_listItemPrice_from">قیمت از :</string>
    <string name="txt_listItemPrice_to">قیمت تا :</string>
    <string name="edt_listItemPrice_from">از</string>
    <string name="edt_listItemPrice_to">تا</string>
    <string name="rb_subMain_search">آیتم</string>

    <string name="my_profile">پروفایل من</string>
    <string name="my_address">آدرس های من</string>
    <string name="history_order">تاریخچه سفارشات</string>
    <string name="downloads">دانلودها</string>
    <string name="favourites">علاقمندی ها</string>
    <string name="transactions">تراکنش ها</string>
    <string name="my_discounts">تخفیف های من</string>
    <string name="messages">پیام ها</string>
    <string name="contact_support">ارتباط با پشتیبانی</string>
    <string name="exit">خروج</string>
    <string name="no_internet">عدم اتصال به اینترنت</string>
    <string name="no_internet_description">اتصال شما به اینترنت برقرار نیست. برای استفاده از نرم افزار به اینترنت متصل شوید</string>
    <string name="internet_mobile">اینترنت موبایل</string>
    <string name="internet_wifi">اینترنت WiFi</string>
    <string name="province">استان</string>
    <string name="city">شهر</string>
    <string name="postal_code">کد پستی</string>
    <string name="address">آدرس</string>
    <string name="accept">تایید</string>
    <string name="province_dot">استان:</string>
    <string name="postal_code_dot">کد پستی:</string>
    <string name="address_dot">آدرس:</string>
    <string name="city_dot">شهرستان:</string>
    <string name="tel_dot">تلفن:</string>
    <string name="remove">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="order_man">نام سفارش دهنده:</string>
    <string name="factor_price">مبلغ فاکتور:</string>
    <string name="post_price">مبلغ پست:</string>
    <string name="lookup_code">کد پیگیری:</string>
    <string name="create_date">تاریخ ایجاد:</string>
    <string name="ord_date">تاریخ سفارش:</string>
    <string name="product_count">تعداد کالاها</string>
    <string name="product">نام کالا</string>
    <string name="product_price">مبلغ کالا:</string>
    <string name="price">مبلغ:</string>
    <string name="price_for_pay">مبلغ قابل پرداخت:</string>
    <string name="card_number">شماره کارت:</string>
    <string name="discount_title">عنوان تخفیف:</string>
    <string name="start_date">تاریخ شروع:</string>
    <string name="end_date">تاریخ پایان:</string>
    <string name="discount_value">مقدار تخفیف:</string>
    <string name="minimum_buy">حداقل مقدار خرید:</string>
    <string name="discount_code">کد تخفیف:</string>
    <string name="clients_comments">نظرات کاربران</string>
    <string name="most_useful_comments">مفیدترین نظرات</string>
    <string name="cost">قیمت:</string>
    <string name="toman">تومان</string>
    <string name="add_to_basket">افزودن به سبد خرید</string>
    <string name="properties">مشخصات</string>
    <string name="total_price_basket">جمع کل سبد خرید شما:</string>
    <string name="color_dot">رنگ:</string>
    <string name="guarantee">گارانتی:</string>
    <string name="count">تعداد:</string>
    <string name="total_price">قیمت کل:</string>
    <string name="discounts_dot"> تخفیف: (-)</string>
    <string name="final_price">قیمت نهایی:</string>
    <string name="remove_from_basket">حذف از سبد خرید</string>
    <string name="final_payment">پرداخت و خرید نهایی</string>
    <string name="select">انتخاب</string>
    <string name="subject">عنوان</string>
    <string name="please_wait">لطفا کمی صبر کنید</string>
    <string name="loading">در حال دریافت اطلاعات</string>
    <string name="toast_press_back_again">برای خروج دکمه بازگشت را مجدد کلیک کنید</string>
    <string name="comment">متن پیام</string>
    <string name="send_comment">ارسال پیام</string>
    <string name="downloadFile">در حال دانلود نسخه جدید</string>
</resources>
