<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <RadioGroup
        android:id="@+id/rg_sortingDialog_sort"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <RadioButton
            android:id="@+id/rb_sortingDialog_hits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_hits" />

        <RadioButton
            android:id="@+id/rb_sortingDialog_topSelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_topSelling" />

        <RadioButton
            android:id="@+id/rb_sortingDialog_specialOffer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_specialOffer" />

        <RadioButton
            android:id="@+id/rb_sortingDialog_decrease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_decrease" />


        <RadioButton
            android:id="@+id/rb_sortingDialog_increase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_increase" />

        <RadioButton
            android:id="@+id/rb_sortingDialog_newest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/txt_sortingDialog_newest" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>