<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_listItemPrice_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txt_listItemPrice_from"
        app:layout_constraintBottom_toBottomOf="@+id/edt_listItemPrice_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_listItemPrice_from" />

    <TextView
        android:id="@+id/txt_listItemPrice_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/txt_listItemPrice_to"
        app:layout_constraintBottom_toBottomOf="@+id/edt_listItemPrice_to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_listItemPrice_to" />

    <EditText
        android:id="@+id/edt_listItemPrice_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/sh_advance_search_edit_text"
        android:ems="10"
        android:hint="@string/edt_listItemPrice_from"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/edt_listItemPrice_to"
        app:layout_constraintEnd_toStartOf="@+id/txt_listItemPrice_from"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_listItemPrice_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/sh_advance_search_edit_text"
        android:ems="10"
        android:hint="@string/edt_listItemPrice_to"
        android:inputType="textPersonName"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_listItemPrice_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_listItemPrice_from" />
</androidx.constraintlayout.widget.ConstraintLayout>