<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_rvOrderHistory_mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear_rvOrderHistory_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linear_rvOrderHistory_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/order_man"

                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/factor_price"

                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/post_price"

                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lookup_code"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_date"

                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ord_date"

                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_count"

                    android:padding="4dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_rvOrderHistory_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/linear_rvOrderHistory_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_rvOrderHistory_orderMan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="هومن هوشیار"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_factorPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="20000000"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_postPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="6500000"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_tracingCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="204587854520"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_createDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="25/05/1398"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_ordDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="20/08/1398"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvOrderHistory_productCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="250"
                    android:padding="4dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>