<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linear_rvDiscounts_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/linear_rvDiscounts_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_title"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_value"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/minimum_buy"
                    android:padding="4dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discount_code"
                    android:padding="4dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_rvDiscounts_content"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/linear_rvDiscounts_title"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_rvDiscounts_discountTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="مشتری خوب"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvDiscounts_startDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="02/04/1398"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvDiscounts_endDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="02/08/1398"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvDiscounts_discountValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="2500"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvDiscounts_minimumBuy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="5200000"
                    android:padding="4dp"/>
                <TextView
                    android:id="@+id/txt_rvDiscounts_discountCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="20125487895554354"
                    android:padding="4dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>